feat(i18n): extend bilingual assessment copy across quiz and result pages

--- a/frontend/user/public/locales/en-US.json
+++ b/frontend/user/public/locales/en-US.json
@@ -152,6 +152,13 @@
   "scales": {
     "title": "Assessment Center",
     "subtitle": "Understand your mental health with professional scales",
+    "name": {
+      "phq9": "PHQ-9 Depression Screening",
+      "gad7": "GAD-7 Anxiety Screening",
+      "pss10": "PSS-10 Perceived Stress",
+      "cssrs": "C-SSRS Safety Risk Screening",
+      "scl90": "SCL-90 Symptom Checklist"
+    },
     "start": "Start Assessment",
     "items": "items",
     "progress": "Question {{current}} of {{total}}",
@@ -196,6 +203,18 @@
   "tests": {
     "title": "Interactive Tests",
     "subtitle": "Discover more about yourself",
+    "name": {
+      "mbti": "MBTI Jungian Dimensions",
+      "16p": "16Personalities Style",
+      "big5": "Big Five OCEAN",
+      "attachment": "Attachment Style",
+      "love_language": "Love Language",
+      "stress_coping": "Stress Coping Style",
+      "eq": "Emotional Intelligence (EQ)",
+      "inner_child": "Inner Child Profile",
+      "boundary": "Interpersonal Boundary",
+      "psych_age": "Psychological Age"
+    },
     "start": "Start Test",
     "dimensions": "dimensions",
     "submit": "See Results",
@@ -222,6 +241,98 @@
       "boundary": "Uses interpersonal boundary-setting theory to assess boundary clarity and consistency in relationships.",
       "psych_age": "Combines developmental and trait indicators to estimate psychological age-band tendencies.",
       "generic": "This test is theory-informed and intended for non-clinical self-exploration."
+    },
+    "summary_label": {
+      "type": "Type",
+      "dimension_strength": "Dimension Strength",
+      "identity_score": "Identity Score",
+      "scores": "Dimension Scores",
+      "dominant_trait": "Dominant Trait",
+      "lowest_trait": "Lowest Trait",
+      "primary_style": "Primary Style",
+      "overall_score": "Overall Score",
+      "level": "Level",
+      "primary_profile": "Primary Profile",
+      "boundary_profile": "Boundary Profile",
+      "average_score": "Average Score",
+      "psychological_age": "Psychological Age",
+      "age_band": "Age Band",
+      "inputs": "Inputs",
+      "E": "Extraversion (E)",
+      "I": "Introversion (I)",
+      "S": "Sensing (S)",
+      "N": "N Dimension",
+      "T": "Thinking (T)",
+      "F": "Feeling (F)",
+      "J": "Judging (J)",
+      "P": "Perceiving (P)",
+      "O": "Openness (O)",
+      "C": "Conscientiousness (C)",
+      "A": "Agreeableness (A)",
+      "chronological_age": "Chronological Age",
+      "curiosity": "Curiosity",
+      "emotional_regulation": "Emotional Regulation",
+      "social_energy": "Social Energy",
+      "secure": "Secure",
+      "anxious": "Anxious",
+      "avoidant": "Avoidant",
+      "fearful": "Fearful",
+      "words": "Words of Affirmation",
+      "acts": "Acts of Service",
+      "gifts": "Receiving Gifts",
+      "time": "Quality Time",
+      "touch": "Physical Touch",
+      "problem_focused": "Problem Focused",
+      "emotion_focused": "Emotion Focused",
+      "avoidance": "Avoidance",
+      "support_seeking": "Support Seeking",
+      "self_awareness": "Self Awareness",
+      "self_regulation": "Self Regulation",
+      "empathy": "Empathy",
+      "relationship_management": "Relationship Management",
+      "playful": "Playful",
+      "wounded": "Wounded",
+      "resilient": "Resilient",
+      "protective": "Protective",
+      "emotional": "Emotional Boundary",
+      "physical": "Physical Boundary",
+      "digital": "Digital Boundary",
+      "work": "Work Boundary",
+      "social": "Social Boundary"
+    },
+    "value_label": {
+      "high": "High",
+      "developing": "Developing",
+      "emerging": "Emerging",
+      "healthy": "Healthy",
+      "fragile": "Fragile",
+      "youthful": "Youthful",
+      "balanced": "Balanced",
+      "mature": "Mature",
+      "secure": "Secure",
+      "anxious": "Anxious",
+      "avoidant": "Avoidant",
+      "fearful": "Fearful",
+      "words": "Words of Affirmation",
+      "acts": "Acts of Service",
+      "gifts": "Receiving Gifts",
+      "time": "Quality Time",
+      "touch": "Physical Touch",
+      "problem_focused": "Problem Focused",
+      "emotion_focused": "Emotion Focused",
+      "avoidance": "Avoidance",
+      "support_seeking": "Support Seeking",
+      "playful": "Playful",
+      "wounded": "Wounded",
+      "resilient": "Resilient",
+      "protective": "Protective",
+      "O": "Openness (O)",
+      "C": "Conscientiousness (C)",
+      "E": "Extraversion (E)",
+      "A": "Agreeableness (A)",
+      "N": "Neuroticism (N)",
+      "mixed": "Mixed",
+      "medium": "Medium"
     }
   },
   "coach_gate": {
