--- a/frontend/user/public/locales/zh-CN.json
+++ b/frontend/user/public/locales/zh-CN.json
@@ -152,6 +152,13 @@
   "scales": {
     "title": "心理量表中心",
     "subtitle": "通过专业量表，科学了解你的心理健康状态",
+    "name": {
+      "phq9": "PHQ-9 抑郁筛查",
+      "gad7": "GAD-7 焦虑筛查",
+      "pss10": "PSS-10 压力量表",
+      "cssrs": "C-SSRS 安全风险筛查",
+      "scl90": "SCL-90 症状自评"
+    },
     "start": "开始测评",
     "items": "题",
     "progress": "第 {{current}} 题 / 共 {{total}} 题",
@@ -196,6 +203,18 @@
   "tests": {
     "title": "互动测试中心",
     "subtitle": "趣味探索，发现更多面的自己",
+    "name": {
+      "mbti": "MBTI 荣格维度",
+      "16p": "16Personalities 风格",
+      "big5": "大五人格 OCEAN",
+      "attachment": "依恋类型",
+      "love_language": "爱的语言",
+      "stress_coping": "压力应对风格",
+      "eq": "情绪智力 EQ",
+      "inner_child": "内在小孩画像",
+      "boundary": "人际边界",
+      "psych_age": "心理年龄"
+    },
     "start": "开始测试",
     "dimensions": "维度",
     "submit": "查看结果",
@@ -222,6 +241,98 @@
       "boundary": "参考关系心理学中的边界设置理论，评估人际边界清晰度与稳定性。",
       "psych_age": "通过发展心理与人格特质组合指标，估计心理功能的年龄带倾向。",
       "generic": "该测试基于心理学理论框架，用于非临床场景下的自我探索。"
+    },
+    "summary_label": {
+      "type": "人格类型",
+      "dimension_strength": "维度强度",
+      "identity_score": "身份维度分",
+      "scores": "维度得分",
+      "dominant_trait": "优势特质",
+      "lowest_trait": "相对低分特质",
+      "primary_style": "主要风格",
+      "overall_score": "综合得分",
+      "level": "等级",
+      "primary_profile": "主要画像",
+      "boundary_profile": "边界画像",
+      "average_score": "平均分",
+      "psychological_age": "心理年龄",
+      "age_band": "年龄带",
+      "inputs": "输入指标",
+      "E": "外向 E",
+      "I": "内向 I",
+      "S": "实感 S",
+      "N": "直觉 N",
+      "T": "思考 T",
+      "F": "情感 F",
+      "J": "判断 J",
+      "P": "感知 P",
+      "O": "开放性 O",
+      "C": "尽责性 C",
+      "A": "宜人性 A",
+      "chronological_age": "实际年龄",
+      "curiosity": "好奇心",
+      "emotional_regulation": "情绪调节",
+      "social_energy": "社交能量",
+      "secure": "安全型",
+      "anxious": "焦虑型",
+      "avoidant": "回避型",
+      "fearful": "恐惧型",
+      "words": "肯定言语",
+      "acts": "服务行动",
+      "gifts": "礼物表达",
+      "time": "高质量陪伴",
+      "touch": "身体接触",
+      "problem_focused": "问题导向",
+      "emotion_focused": "情绪导向",
+      "avoidance": "回避型应对",
+      "support_seeking": "寻求支持",
+      "self_awareness": "自我觉察",
+      "self_regulation": "自我调节",
+      "empathy": "共情能力",
+      "relationship_management": "关系管理",
+      "playful": "玩乐型",
+      "wounded": "受伤型",
+      "resilient": "韧性型",
+      "protective": "保护型",
+      "emotional": "情绪边界",
+      "physical": "身体边界",
+      "digital": "数字边界",
+      "work": "工作边界",
+      "social": "社交边界"
+    },
+    "value_label": {
+      "high": "高",
+      "developing": "发展中",
+      "emerging": "起步中",
+      "healthy": "健康",
+      "fragile": "脆弱",
+      "youthful": "年轻型",
+      "balanced": "平衡型",
+      "mature": "成熟型",
+      "secure": "安全型",
+      "anxious": "焦虑型",
+      "avoidant": "回避型",
+      "fearful": "恐惧型",
+      "words": "肯定言语",
+      "acts": "服务行动",
+      "gifts": "礼物表达",
+      "time": "高质量陪伴",
+      "touch": "身体接触",
+      "problem_focused": "问题导向",
+      "emotion_focused": "情绪导向",
+      "avoidance": "回避型应对",
+      "support_seeking": "寻求支持",
+      "playful": "玩乐型",
+      "wounded": "受伤型",
+      "resilient": "韧性型",
+      "protective": "保护型",
+      "O": "开放性 O",
+      "C": "尽责性 C",
+      "E": "外向 E",
+      "A": "宜人性 A",
+      "N": "神经质 N",
+      "mixed": "混合",
+      "medium": "中等"
     }
   },
   "coach_gate": {
