feat(meditation): ship 12-track curated playlist with license metadata (T-803)

--- a/frontend/user/public/locales/en-US.json
+++ b/frontend/user/public/locales/en-US.json
@@ -432,7 +432,7 @@
     "meditation_desc": "Guided mindfulness practice",
     "meditation_page_title": "Guided Meditation Audio",
     "meditation_page_subtitle": "Pick a guided session and follow the rhythm of breath and awareness.",
-    "meditation_local_audio_note": "Local meditation audio files are integrated and ready for playback.",
+    "meditation_local_audio_note": "Curated online meditation tracks are integrated with source and license metadata.",
     "meditation_now_playing": "Now Playing",
     "meditation_log_failed": "Playback started, but session logging failed. Please retry later.",
     "meditation_play_failed": "Unable to play audio. Please check audio permissions and retry.",
@@ -450,6 +450,41 @@
     "meditation_track_focus_desc": "Bring attention back to body sensations and reduce mental noise.",
     "meditation_track_sleep_title": "Sleep Wind Down (20 min)",
     "meditation_track_sleep_desc": "Slow your nervous system and transition into restful sleep.",
+    "meditation_meta_source": "Source",
+    "meditation_meta_license": "License",
+    "meditation_meta_attribution": "Attribution",
+    "meditation_tag_stress": "Stress Relief",
+    "meditation_tag_sleep": "Sleep",
+    "meditation_tag_focus": "Focus",
+    "meditation_tag_recovery": "Recovery",
+    "meditation_tag_ambient": "Ambient",
+    "meditation_tag_breathing": "Breathwork",
+    "meditation_tag_mantra": "Mantra",
+    "meditation_tag_nature": "Nature",
+    "meditation_track_stress_reset_title": "Gentle Reset",
+    "meditation_track_stress_reset_desc": "A soft breathing anchor to release immediate tension.",
+    "meditation_track_sleep_starlight_title": "Starlight Drift",
+    "meditation_track_sleep_starlight_desc": "Slow down mental chatter and prepare for deeper rest.",
+    "meditation_track_focus_pulse_title": "Soft Pulse Focus",
+    "meditation_track_focus_pulse_desc": "Steady rhythm for single-task focus sessions.",
+    "meditation_track_recovery_forest_title": "Forest Recovery",
+    "meditation_track_recovery_forest_desc": "Nature-forward track for emotional and sensory reset.",
+    "meditation_track_focus_deep_title": "Deep Focus Session",
+    "meditation_track_focus_deep_desc": "Longer cycle to return attention and reduce inner noise.",
+    "meditation_track_recovery_mantra_title": "Mantra Wave",
+    "meditation_track_recovery_mantra_desc": "Gentle mantra texture for grounding after overwhelm.",
+    "meditation_track_stress_drone_title": "Soft Drone Ease",
+    "meditation_track_stress_drone_desc": "Low-intensity sound bed for quick regulation.",
+    "meditation_track_sleep_night_title": "Night Comfort",
+    "meditation_track_sleep_night_desc": "Warm relaxing layer for bedtime wind-down.",
+    "meditation_track_stress_anchor_title": "Breath Anchor",
+    "meditation_track_stress_anchor_desc": "Short guided rhythm when anxiety spikes.",
+    "meditation_track_recovery_yoga_title": "Yoga Grounding",
+    "meditation_track_recovery_yoga_desc": "Voice-guided body awareness for system recovery.",
+    "meditation_track_focus_sun_title": "Sun Meditation",
+    "meditation_track_focus_sun_desc": "Attention training with calm narration and pace.",
+    "meditation_track_sleep_long_title": "Deep Sleep Long Session",
+    "meditation_track_sleep_long_desc": "Extended wind-down loop for a full sleep transition.",
     "pomo_title": "Focus Timer",
     "pomo_desc": "Pomodoro + micro-rewards to get you moving",
     "back_to_tools": "Back to Tools",
