--- a/frontend/user/public/locales/zh-CN.json
+++ b/frontend/user/public/locales/zh-CN.json
@@ -432,7 +432,7 @@
     "meditation_desc": "引导式正念练习",
     "meditation_page_title": "冥想引导音频",
     "meditation_page_subtitle": "选择一段引导语，安静地跟随节奏呼吸与觉察。",
-    "meditation_local_audio_note": "已接入本地冥想音频文件，可离线缓存后直接播放。",
+    "meditation_local_audio_note": "已接入精选线上冥想音频，并展示来源与授权信息。",
     "meditation_now_playing": "正在播放",
     "meditation_log_failed": "已开始播放，但记录会话失败，可稍后重试",
     "meditation_play_failed": "播放失败，请检查设备音频权限或稍后重试",
@@ -450,6 +450,41 @@
     "meditation_track_focus_desc": "把注意力带回身体感受，减少分心和内耗。",
     "meditation_track_sleep_title": "睡前安抚（20 分钟）",
     "meditation_track_sleep_desc": "降低夜间唤醒，帮助身心过渡到休息状态。",
+    "meditation_meta_source": "来源",
+    "meditation_meta_license": "授权",
+    "meditation_meta_attribution": "署名",
+    "meditation_tag_stress": "减压",
+    "meditation_tag_sleep": "助眠",
+    "meditation_tag_focus": "专注",
+    "meditation_tag_recovery": "恢复",
+    "meditation_tag_ambient": "环境音",
+    "meditation_tag_breathing": "呼吸引导",
+    "meditation_tag_mantra": "咒音",
+    "meditation_tag_nature": "自然",
+    "meditation_track_stress_reset_title": "温和重置",
+    "meditation_track_stress_reset_desc": "用轻柔节奏快速放松身心，缓解当下紧张。",
+    "meditation_track_sleep_starlight_title": "星夜安抚",
+    "meditation_track_sleep_starlight_desc": "慢慢降低大脑唤醒度，帮助进入休息状态。",
+    "meditation_track_focus_pulse_title": "脉冲专注",
+    "meditation_track_focus_pulse_desc": "稳定节拍帮助你进入单任务专注。",
+    "meditation_track_recovery_forest_title": "森林修复",
+    "meditation_track_recovery_forest_desc": "自然氛围音帮助感官和情绪回到安全区。",
+    "meditation_track_focus_deep_title": "深度专注",
+    "meditation_track_focus_deep_desc": "更长时段的沉浸练习，减少内耗与分心。",
+    "meditation_track_recovery_mantra_title": "咒音回稳",
+    "meditation_track_recovery_mantra_desc": "通过重复咒音节奏，帮助过载后的神经系统回稳。",
+    "meditation_track_stress_drone_title": "轻频舒缓",
+    "meditation_track_stress_drone_desc": "低刺激背景音，适合快速调节呼吸与心率。",
+    "meditation_track_sleep_night_title": "夜间安放",
+    "meditation_track_sleep_night_desc": "温和声场辅助睡前放松与过渡。",
+    "meditation_track_stress_anchor_title": "呼吸锚点",
+    "meditation_track_stress_anchor_desc": "焦虑升高时可快速启动的短时引导。",
+    "meditation_track_recovery_yoga_title": "瑜伽落地",
+    "meditation_track_recovery_yoga_desc": "语音引导身体觉察，帮助系统恢复平衡。",
+    "meditation_track_focus_sun_title": "日光冥想",
+    "meditation_track_focus_sun_desc": "平稳语速配合注意力训练，提升当下专注。",
+    "meditation_track_sleep_long_title": "深眠长时段",
+    "meditation_track_sleep_long_desc": "延长版睡前放松循环，帮助完成入睡过渡。",
     "pomo_title": "多巴胺番茄钟",
     "pomo_desc": "专注力管理 + 微奖励，帮你启动任务",
     "back_to_tools": "返回疗愈工具",
