feat(tools): complete T-805 pomodoro floating mini timer

--- a/frontend/user/public/locales/en-US.json
+++ b/frontend/user/public/locales/en-US.json
@@ -408,6 +408,9 @@
     "audio_title": "White Noise",
     "audio_desc": "Ambient sounds for focus and relaxation",
     "audio_mix_hint": "You can combine multiple sounds and adjust each volume independently.",
+    "pomo_floating_open": "Open pomodoro mini timer",
+    "pomo_floating_minimize": "Minimize pomodoro mini timer",
+    "pomo_floating_expand": "Expand pomodoro mini timer",
     "sound_rain": "Rain",
     "sound_ocean": "Ocean",
     "sound_forest": "Forest",
