--- a/frontend/user/public/locales/zh-CN.json
+++ b/frontend/user/public/locales/zh-CN.json
@@ -408,6 +408,9 @@
     "audio_title": "白噪音",
     "audio_desc": "环境音帮你专注放松",
     "audio_mix_hint": "可多选叠加播放，先点选声音，再分别调节每个音量。",
+    "pomo_floating_open": "打开番茄钟小窗",
+    "pomo_floating_minimize": "最小化番茄钟小窗",
+    "pomo_floating_expand": "展开番茄钟小窗",
     "sound_rain": "雨声",
     "sound_ocean": "海浪",
     "sound_forest": "森林",
