feat(mindfulness): complete T-804 dual-mode manifestation flow and IA upgrade

--- a/frontend/user/public/locales/en-US.json
+++ b/frontend/user/public/locales/en-US.json
@@ -489,7 +489,19 @@
       "title": "Mindfulness Space",
       "subtitle": "Practice slower, deeper regulation here. Meditation and manifestation tools will keep expanding in this space.",
       "meditation_title": "Guided Meditation",
-      "meditation_desc": "Pick a guided track and follow breath plus attention to settle deeply."
+      "meditation_desc": "Pick a guided track and follow breath plus attention to settle deeply.",
+      "quick_title": "Quick Start",
+      "quick_desc": "When you only need to stabilize, use a 1-3 minute micro-practice to regain tolerable rhythm.",
+      "deep_title": "Deep Practice",
+      "deep_desc": "When capacity allows, move into full-length practice for longer-term regulation.",
+      "quick_badge": "1-3 min",
+      "deep_badge": "10+ min",
+      "meditation_deep_desc": "Choose a longer session and complete a full breath-awareness-closure cycle.",
+      "manifestation_quick_desc": "Generate one focused affirmation and pull attention back to your intention.",
+      "flow_title": "Suggested Flow",
+      "flow_step_1": "Stabilize first with a quick practice (breath or one affirmation)",
+      "flow_step_2": "Then move into deep practice (meditation or manifestation cards)",
+      "flow_step_3": "Close with one actionable micro-step for today"
     },
     "manifestation": {
       "badge": "Live v1",
@@ -506,7 +518,22 @@
       "vision_desc": "Turn your desired future into cards you can read and feel.",
       "vision_title_placeholder": "Card title",
       "vision_note_placeholder": "Describe what you see and feel when this vision has happened.",
-      "empty_vision": "No vision cards yet. Save your first one."
+      "empty_vision": "No vision cards yet. Save your first one.",
+      "mode_quick": "Quick Start",
+      "mode_deep": "Deep Practice",
+      "quick_title": "Quick Manifestation (1 min)",
+      "quick_desc": "Pick a focus, generate an affirmation, and save it in one step.",
+      "quick_focus_label": "Focus for this round",
+      "quick_focus_stability": "Stability",
+      "quick_focus_confidence": "Confidence",
+      "quick_focus_calm": "Calm",
+      "quick_preview_label": "Affirmation preview",
+      "quick_template_stability": "I am returning to steadiness and clarity, and I can finish this next small step.",
+      "quick_template_confidence": "I deserve to be seen, and I can express and move my top priority forward today.",
+      "quick_template_calm": "I allow myself to slow down, and my breath brings me back to calm control.",
+      "quick_apply": "Save this affirmation",
+      "deep_title": "Deep Manifestation (10+ min)",
+      "deep_desc": "Turn intention into actionable cues through affirmations and vision cards."
     },
     "meditation_attr": {
       "pixabay_no_attribution": "No attribution required. Keep source URL and license snapshots before release.",
