--- a/frontend/user/public/locales/zh-CN.json
+++ b/frontend/user/public/locales/zh-CN.json
@@ -489,7 +489,19 @@
       "title": "心灵空间",
       "subtitle": "在这里做更慢、更深的练习。冥想与显化工具会在这里持续扩展。",
       "meditation_title": "冥想引导",
-      "meditation_desc": "选择一段引导语，跟随呼吸和注意力完成一次深度放松。"
+      "meditation_desc": "选择一段引导语，跟随呼吸和注意力完成一次深度放松。",
+      "quick_title": "快速开始",
+      "quick_desc": "当下只想先稳住时，先做 1-3 分钟的短练习，快速回到可承受节奏。",
+      "deep_title": "深度练习",
+      "deep_desc": "在状态允许时进入更完整的练习流程，沉淀长期稳定感。",
+      "quick_badge": "1-3 分钟",
+      "deep_badge": "10+ 分钟",
+      "meditation_deep_desc": "选择更长时长音轨，完成一次完整的呼吸-觉察-收束闭环。",
+      "manifestation_quick_desc": "一键生成当下肯定语，先把注意力从混乱拉回目标。",
+      "flow_title": "建议流程",
+      "flow_step_1": "先做快速稳定（呼吸或一句肯定语）",
+      "flow_step_2": "再进入深度练习（冥想或显化卡片）",
+      "flow_step_3": "结束后记录一句今天可执行的微行动"
     },
     "manifestation": {
       "badge": "已上线 v1",
@@ -506,7 +518,22 @@
       "vision_desc": "把想要发生的画面写成可读、可感受的卡片。",
       "vision_title_placeholder": "卡片标题",
       "vision_note_placeholder": "描述这个愿景已经发生时，你会看到什么、感受到什么。",
-      "empty_vision": "还没有愿景卡片，先保存第一张。"
+      "empty_vision": "还没有愿景卡片，先保存第一张。",
+      "mode_quick": "快速开始",
+      "mode_deep": "深度练习",
+      "quick_title": "快速显化（1 分钟）",
+      "quick_desc": "选定当前焦点，一键生成肯定语并立即保存到记录。",
+      "quick_focus_label": "本次焦点",
+      "quick_focus_stability": "稳定感",
+      "quick_focus_confidence": "自信感",
+      "quick_focus_calm": "平静感",
+      "quick_preview_label": "预览肯定语",
+      "quick_template_stability": "我正在一步步回到稳定和清晰，我可以先完成眼前这一小步。",
+      "quick_template_confidence": "我值得被看见，我有能力稳稳表达并推动今天最重要的事。",
+      "quick_template_calm": "我允许自己慢下来，呼吸会把我带回平静与掌控。",
+      "quick_apply": "保存这句肯定语",
+      "deep_title": "深度显化（10 分钟+）",
+      "deep_desc": "通过肯定语与愿景卡片把目标写成可感知、可执行的行动线索。"
     },
     "meditation_attr": {
       "pixabay_no_attribution": "无需署名；上线前保留来源链接与许可证快照。",
