--- a/frontend/user/public/locales/zh-CN.json
+++ b/frontend/user/public/locales/zh-CN.json
@@ -198,6 +198,7 @@
     "paywall_subtitle": "当前方案仅支持填写量表。订阅后可查看完整得分解读与趋势。",
     "unlock_reports": "去订阅解锁",
     "back_to_list": "返回量表列表",
+    "purpose_label": "做这个有什么用",
     "professional_library_title": "权威量表库",
     "professional_library_subtitle": "集中展示文献来源、适用场景、计分逻辑与边界说明。",
     "use_case_label": "适用场景",
@@ -212,6 +213,15 @@
       "scl90": "SCL-90 覆盖多维心理症状群，可用于总体心理困扰水平的广泛筛查。",
       "who5": "WHO-5 用于评估近两周主观幸福感水平，可辅助观察情绪恢复趋势。",
       "generic": "该量表基于标准化心理测量框架，可用于初步状态评估。"
+    },
+    "purpose": {
+      "phq9": "帮助你快速判断最近的低落情绪是否在加重。",
+      "gad7": "帮助你识别焦虑是否已影响到日常生活功能。",
+      "pss10": "帮助你看清当前主观压力感是否在持续堆积。",
+      "cssrs": "帮助识别紧急安全风险信号，以便系统及时进入保护流程。",
+      "scl90": "帮助你查看广泛困扰分布，定位更需要支持的方向。",
+      "who5": "帮助你追踪积极状态与恢复势头的变化。",
+      "generic": "帮助你建立一个可持续对照的基础状态快照。"
     },
     "errors": {
       "complete_section": "请先完成本组全部题目再继续"
@@ -246,6 +256,7 @@
     "pair_pending": "等待对方完成测试后即可生成匹配结果。",
     "share": "分享结果",
     "back_to_list": "返回测试列表",
+    "purpose_label": "做这个有什么用",
     "intro": {
       "mbti": "基于荣格心理类型维度，用于识别信息加工与决策偏好。",
       "16p": "在 MBTI 维度基础上加入身份倾向维度，描述人格风格差异。",
@@ -258,6 +269,19 @@
       "boundary": "参考关系心理学中的边界设置理论，评估人际边界清晰度与稳定性。",
       "psych_age": "通过发展心理与人格特质组合指标，估计心理功能的年龄带倾向。",
       "generic": "该测试基于心理学理论框架，用于非临床场景下的自我探索。"
+    },
+    "purpose": {
+      "mbti": "帮助你理解自己的信息处理与决策偏好。",
+      "16p": "帮助你用更直观的语言描述自己的人格倾向。",
+      "big5": "帮助你看到五大人格维度上的稳定特征分布。",
+      "attachment": "帮助你理解亲密关系中的安全感与依赖模式。",
+      "love_language": "帮助你明确最能让自己感到被支持的关爱方式。",
+      "stress_coping": "帮助你识别自己在压力下默认采用的应对策略。",
+      "eq": "帮助你回顾情绪觉察、调节与共情能力的强弱点。",
+      "inner_child": "帮助你识别反复出现的情绪触发点与需求模式。",
+      "boundary": "帮助你检查人际边界是否清晰、稳定、可执行。",
+      "psych_age": "帮助你反思当前心理成熟度倾向与成长方向。",
+      "generic": "帮助你获得一个简明的自我观察视角。"
     },
     "summary_label": {
       "type": "人格类型",
